# opengl_graphics

./: .gitignore  CMakeLists.txt  readme.md
include/glad/: glad.h
src/: glad.c  indexed_triangle.cpp  triangle.cpp  triangle_e1.cpp  triangle_e2.cpp  triangle_e3.cpp  window.cpp
src/1.getting_started/: hello_window.cpp
